# ProductionGradeRAGPythonApp

./: .env.example  .gitignore  BUSINESS_CONFIG.md  ChatInterface.tsx  DATATABLE_DEBUG.md  DATATABLE_README.md  Dockerfile  FRONTEND-SETUP.md  README.md  agentic_rag.py  api-service.ts  api.py  api_minimal.py  api_simple.py  app-context.tsx  app.tsx  aurora_setup.md  chat-layout.tsx  chat_app.py  check_aurora_tables.py  check_db.py  clean_data.py  clean_postgresql.py  config.json  config_default.json  config_retail_chain.json  config_salon_example.json  create_inserts.py  create_trust_bank_table.sql  data_loader.py  db_query.py  db_query_updated.py  demo_agentic_rag.py  demo_enterprise.py  docker-compose.yml  enterprise_db_connector.py  fix_environment.bat  frontend-architecture.md  generate_inserts.py  insert_trust_bank.py  (+32 more)
app/: tenant_config.json
data/: semantic_dict.json
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/database/: route.ts
frontend/src/components/: chat-layout.tsx  chat-panel.tsx  chat-updated.tsx  chat.tsx  interactive-chart.tsx  message.tsx  sidebar.tsx
frontend/src/components/ui/: card.tsx  data-table.tsx  input.tsx  table.tsx
frontend/src/context/: app-context.tsx
frontend/src/lib/: app-context.tsx  utils.ts
frontend/src/services/: api-service.ts
frontend/src/types/: api.ts
